# GifProject

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/gifplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/gifplayer/: ChangtuActivity.java  FileUtil.kt  MainActivity.kt  NeBigView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: app_file_paths.xml
app/src/test/java/com/example/gifplayer/: ExampleUnitTest.kt
gif_lib/: build.gradle
gif_lib/src/androidTest/java/com/vam/giflib/: ExampleInstrumentedTest.java
gif_lib/src/main/cpp/: CMakeLists.txt  giflibs.cpp
gif_lib/src/main/java/com/vam/giflib/: NativeLib.java
gif_lib/src/main/java/com/vam/giflib/gif/: GifHandler.java
gif_lib/src/test/java/com/vam/giflib/: ExampleUnitTest.java
gif_lib2/: build.gradle
gif_lib2/src/androidTest/java/com/example/gif_lib2/: ExampleInstrumentedTest.kt
gif_lib2/src/main/cpp/: CMakeLists.txt  gif_lib2.cpp
gif_lib2/src/main/java/com/example/gif_lib2/: NativeLib.kt
gif_lib2/src/test/java/com/example/gif_lib2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
